# bitflyer-realtime-dashboard

./: .env.example  .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
src/bitflyer_realtime_dashboard/: __main__.py  cli.py  clickhouse_client.py  config.py  dashboard_app.py  formatting.py  models.py  rendering.py
tests/: test_alerts.py  test_board_parsing.py  test_config.py  test_filters.py  test_formatting.py  test_repository_helpers.py
