[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bitflyer-realtime-dashboard"
version = "0.1.0"
description = "CLI dashboard for monitoring latest bitFlyer realtime data in ClickHouse"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
  { name = "Noriaki Ohshima" }
]
dependencies = [
  "clickhouse-connect>=0.8.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.0",
  "PyYAML>=6.0.0",
  "rich>=13.7.0",
  "textual>=0.66.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.4.0",
]

[project.scripts]
bitflyer-realtime-dashboard = "bitflyer_realtime_dashboard.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/bitflyer_realtime_dashboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

